# obsidian-audio-note

./: README.md  archive.sh  process_voice_memos.py  pyproject.toml  run.sh
src/: __init__.py  audio_converter.py  file_utils.py  transcriber.py
tests/: __init__.py  test_audio_converter.py  test_file_utils.py  test_transcription.py
